# data-mapping-metadata-editor

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/agents/: MappingLakehouseAgent.agent.md
.run/: run.run.xml
app/: main.py
app/models/: __init__.py  destination.py  destination_schema.py  mapping_field.py  mapping_meta_entry.py  mapping_meta_object.py  mapping_object.py  orm.py  source.py  source_schema.py
app/pages/: 01_import_csv.py  02_sources.py  03_destinations.py  04_mapping_graph.py  05_mapping_editor.py  06_export.py
app/services/: common.py  db.py  exporter.py  importer.py  storage.py  validators.py
imports/destinations/: alert_triggered_events.csv  alerts.csv  limits.csv  odds_changed_events.csv  odds_snapshot.csv  players.csv  refund_issued_events.csv  refunds.csv  ticket_created_events.csv  ticket_settled_events.csv  tickets.csv  transaction_created_events.csv  transactions.csv
imports/sources/kafka/: kafka_topics_inventory.csv
imports/sources/kafka/events/: betting_ticket_created.json  payments_transaction_created.json  risk_alert_triggered.json
imports/sources/kafka/schemas/: betting_ticket_created.json  payments_transaction_created.json  risk_alert_triggered.json
imports/sources/postgres/: alerts.csv  limits.csv  odds_snapshot.csv  players.csv  postgres_sources_inventory.csv  refunds.csv  tickets.csv  transactions.csv
tests/services/: test_importer.py
